resume expandable boxes

--- a/about.html
+++ b/about.html
@@ -44,62 +44,62 @@
 <div class="indent"></div>
 <div class="resume-container">
     <div class="hikes">
-        <h1>Thru-Hikes</h1>
+        <h1>Thru-Hikes&nbsp<i class="fa-solid fa-caret-down carrot-two"></i></h1>
             <ul>
                 <li>
                     <h3><span class="year">2019</span></h3></li>
                     <ul>
-                    <li>Simien National Park (140 miles 7 days), Ehtiopia</li>
-                    <li>Mt. Kenya Traverse (80 miles 3 days), Kenya</li>
+                    <li>-Simien National Park, Ehtiopia<br>(140 miles 7 days)</li>
+                    <li>-Mt. Kenya Traverse, Kenya (80 miles 3 days)</li>
                     </ul>
                     <li><h3><span class="year">2018</span></h3></li>
                         <ul>
-                        <li>Great Himalayan Trail Nepal(1000 miles 50 days), Nepal</li>
-                        <li>Silk Road Route Himachal->Ladakh (400 miles 14 days), India</li>
+                        <li>-Great Himalayan Trail, Nepal<br>(1000 miles 50 days)</li>
+                        <li>-Silk Road Route Himachal->Ladakh, India (400 miles 14 days)</li>
                         </ul>
                     <li><h3><span class="year">2017</span></h3></li>
                         <ul>
-                        <li>Hayduke Trail (1000 miles 44 days), UT, AZ USA</li>
-                        <li>Wind-River High Route (100 miles 4.5 days), WY, USA</li>
-                        <li>Yellowstone Mountain Route (300 miles 18 days), WY, MT USA</li>
+                        <li>-Hayduke Trail UT-AZ, USA<br>(1000 miles 46 days)</li>
+                        <li>-Wind-River High Route WY, USA<br>(100 miles 4.5 days)</li>
+                        <li>-Yellowstone Mountain Route, WY-MT, USA (300 miles 18 days)</li>
                         </ul>
                     <li><h3><span class="year">2016</span></h3></li>
                         <ul>
-                        <li>Continental Divide Trail (3000 miles 6 months), Mex->Can thru the Rockies</li>
+                        <li>-Continental Divide Trail, MEX->CAN thru the Rockies (3000 miles 6 months)</li>
                         </ul>
                     <li><h3><span class="year">2012</span></h3></li>
                         <ul>
-                        <li>Appalachian Trail (2200 miles 6 months), Mex->Can thru the Appalachian mtns</li>
+                        <li>-Appalachian Trail, MEX->CAN thru the Appalachians (2200 miles 6 months)</li>
                         </ul>
                 </li>
             </ul>
     </div>
     <div class="runs">
-        <h1>Trail Races</h1>
+        <h1>Trail Races <i class="fa-solid fa-caret-down carrot"></i></h1>
         <ul>
             <li><h3><span class="year">2021</span></h3></li>
                 <ul>
-                     <li><span class="place">2<sup>nd&nbsp;</sup>&nbsp;39h40m&nbsp;</span>Grand Raid Pyrenees Ultra Tour (220km 13000m D+) Pyreenes, France</li>
-                    <li><span class="place">2<sup>nd&nbsp;</sup>&nbsp;14h34m&nbsp;</span>Greenweez MaXi-Race Ultra (110km 6600m D+) Alps, France</li>
+                     <li>-Grand Raid Pyrenees Ultra Tour (220km 13000m D+), St Lary, France &nbsp;<span class="place">2<sup>nd&nbsp;</sup>&nbsp;39h40m&nbsp;</span></li>
+                    <li>-Greenweez MaXi-Race Ultra (110km 6600m D+) Annecy, France &nbsp;<span class="place">2<sup>nd&nbsp;</sup>&nbsp;14h34m&nbsp;</span></li>
                  </ul>
             <li><h3><span class="year">2020</span></h3></li>
                 <ul>
-                     <li><span class="place">1<sup>st&nbsp;</sup>&nbsp;4h18m&nbsp;</span>Tassie Trail Fest (55km 1500m D+), TAS, Austraila</li>
-                    <li><span class="place">3<sup>rd&nbsp;</sup>&nbsp;31:03&nbsp;</span>Devonport 10k, TAS Austraila</li>
+                     <li>-Tassie Trail Fest (55km 1500m D+), TAS, Austraila &nbsp;<span class="place">1<sup>st&nbsp;</sup>&nbsp;4h18m&nbsp;</span></li>
+                    <li>-Devonport 10k, TAS Austraila &nbsp;<span class="place">3<sup>rd&nbsp;</sup>&nbsp;31:03&nbsp;</span></li>
                  </ul>
             <li><h3><span class="year">2019</span></h3></li>
                 <ul>
-                     <li><span class="place">1<sup>st&nbsp;</sup>&nbsp;1h20m&nbsp;</span>Pyramid Race(12.5km 1000m D+), QSL, Austraila</li>
+                     <li>-Pyramid Race(12.5km 1000m D+), QSL, Austraila &nbsp;<span class="place">1<sup>st&nbsp;</sup>&nbsp;1h20m&nbsp;</span></li>
                  </ul>
             <li><h3><span class="year">2018</span></h3></li>
                 <ul>
-                     <li><span class="place">30<sup>th&nbsp;</sup>&nbsp;31h20m&nbsp;</span>Grand Raid Reuinion DDF (168km 10000m D+), Reunion, France</li>
+                     <li>-Grand Raid Reuinion DDF (168km 10000m D+), Reunion, France &nbsp;<span class="place">30<sup>th&nbsp;</sup>&nbsp;31h20m&nbsp;</span></li>
                  </ul>
             <li><h3><span class="year">2017</span></h3></li>
                 <ul>
-                     <li><span class="place">16<sup>th&nbsp;</sup>&nbsp;27h&nbsp;</span>IMTUF 100 (161km 7000m D+), ID, USA</li>
-                     <li><span class="place">4<sup>th&nbsp;</sup>&nbsp;26h&nbsp;</span>High Lonesome 100 (161km 8000m D+), CO, USA</li>
-                     <li><span class="place">10<sup>th&nbsp;</sup>&nbsp;10h&nbsp;</span>San Juan Solstice (80km 4000m D+), CO, USA</li>
+                    
+                     <li>-High Lonesome 100 (161km 8000m D+), CO, USA &nbsp;<span class="place">4<sup>th&nbsp;</sup>&nbsp;26h&nbsp;</span></li>
+                     <li>-San Juan Solstice (80km 4000m D+), CO, USA&nbsp;<span class="place">10<sup>th&nbsp;</sup>&nbsp;10h&nbsp;</span></li>
                  </ul>
             
         </ul>
