--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>about page</title>
+    <title>About Page</title>
     <link href="/css/about.css" rel="stylesheet">
     <link
         href="https://fonts.googleapis.com/css2?family=Bellota+Text:ital,wght@0,300;0,400;0,700;1,400&family=Fredoka:wght@300;400&family=Plaster&display=swap"
@@ -97,7 +97,6 @@
                  </ul>
             <li><h3><span class="year">2017</span></h3></li>
                 <ul>
-                    
                      <li>-High Lonesome 100 (161km 8000m D+), CO, USA &nbsp;<span class="place">4<sup>th&nbsp;</sup>&nbsp;26h&nbsp;</span></li>
                      <li>-San Juan Solstice (80km 4000m D+), CO, USA&nbsp;<span class="place">10<sup>th&nbsp;</sup>&nbsp;10h&nbsp;</span></li>
                  </ul>
@@ -111,7 +110,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.3/ScrollTrigger.min.js"></script>
-    <script src="/about.js"></script>
+    <script src="/js files/about.js"></script>
 </body>
 
 </html>
