--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ben Dhiman Athlete Page</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
 <link
     href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Bellota+Text:ital,wght@0,300;0,400;0,700;1,400&family=Coda:wght@400;800&family=Plaster&family=Suez+One&family=Titillium+Web:ital,wght@0,900;1,700&display=swap"
     rel="stylesheet">
@@ -20,15 +20,15 @@
     </div>
     <div class="hero-nav">
         <ul>
-            <li class="home-nav"><a class="sub-header test-link" href="./circle-text.html">RACING</a></li>
+            <li class="home-nav"><a class="sub-header test-link" href="/racing.html">RACING</a></li>
             <li class="home-nav"><a class="sub-header" href="#">COACHING</a></li>
-            <li class="home-nav"><a class="sub-header" href="#">ABOUT</a></li>
+            <li class="home-nav"><a class="sub-header" href="/about.html">ABOUT</a></li>
         </ul>
     </div>
 </div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
-<script src="script.js"></script>
+<script src="/js files/script.js"></script>
 </body>
 </html>
