--- a/racing.html
+++ b/racing.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>circle text</title>
+    <title>Racing Page</title>
     <link rel="stylesheet" href="./css/circle-txt.css">
 <link
     href="https://fonts.googleapis.com/css2?family=Bellota+Text:ital,wght@0,300;0,400;0,700;1,400&family=Fredoka:wght@300;400&family=Plaster&display=swap"
@@ -17,7 +17,7 @@
 <div class="container">
     <nav>
         <ul>
-            <li><a class="animate-link" href="/index.html"><i id="star-spin" class="fa-solid fa-bahai"></i>&nbsp HOME</a></li>
+            <li><a class="animate-link" href="./index.html"><i id="star-spin" class="fa-solid fa-bahai"></i>&nbsp HOME</a></li>
         </ul>
     </nav>
 <div class="panel-two">
@@ -265,13 +265,13 @@
     </div>
 <nav class="bottom-nav">
     <ul>
-        <li><a class="animate-link" href="/index.html"><i class="fa-solid fa-bahai"></i>&nbsp HOME</a></li>
+        <li><a class="animate-link" href="./index.html"><i class="fa-solid fa-bahai"></i>&nbsp HOME</a></li>
     </ul>
 </nav>
 </div>
 </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.3/ScrollTrigger.min.js"></script>
-    <script src="./script.js"></script>
+    <script src="/js files/script.js"></script>
 </body>
 </html>
