--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
     <div class="hero-nav">
         <ul>
             <li class="home-nav"><a class="sub-header test-link" href="/racing.html">RACING</a></li>
+            <li class="home-nav"><a class="sub-header" href="/about.html">PHILOSOPHY</a></li>
             <li class="home-nav"><a class="sub-header" href="#">COACHING</a></li>
-            <li class="home-nav"><a class="sub-header" href="/about.html">ABOUT</a></li>
+            
         </ul>
     </div>
 </div>
