--- a/racing.html
+++ b/racing.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Racing Page</title>
-    <link rel="stylesheet" href="./css/circle-txt.css">
+    <link rel="stylesheet" href="./css/racing.css">
 <link
     href="https://fonts.googleapis.com/css2?family=Bellota+Text:ital,wght@0,300;0,400;0,700;1,400&family=Fredoka:wght@300;400&family=Plaster&display=swap"
     rel="stylesheet">
@@ -143,12 +143,11 @@
 </div>
     <div class="info-packet-container"> 
         <div class="info-packet bagnere-classic">
-            <div class="winner">
+            <a href="https://pb-organisation.com/resultats/G-LIVE/g-live.html?f=../suivi2022/BAGNERES%20CLASSIC%20TRAIL%202022.clax" target="_blank"><div class="winner">
                 <i class="fa-solid fa-trophy trophy"></i>
                     <h3>1<sup>st</sup><br>2:09<br><span id="course-rec">Course Record</span></h3>
                 
-            </div>
-            <!-- <div class="border-class"></div> -->
+            </div></a>
             <div class="img-thumbnail-left"></div>
                 <h2 class="trail-name">Bagneres Classic</h2>
                 <h4><span class="stats-span">25km + 1500m D+</span></h4>
@@ -160,8 +159,8 @@
                 </ul>
         </div>
         <div class="info-packet">
-            <div class="border-class"></div>
-            <div class="img-thumbnail-right"></div>
+            <a href="https://www.trails-hautacam.com/" target="_blank"><div class="border-class"></div></a>
+           <div class="img-thumbnail-right"></div>
             <h2 class="trail-name">Hautacam Trails</h2>
             <h4>22km + 1600m D+</h4>
                 <ul>
@@ -172,7 +171,7 @@
                 </ul>
         </div>
         <div class="info-packet">
-            <div class="border-class"></div>
+            <a href="https://www.patoutrailsaintlary.com/fr/les-courses/le-marathon" target="_blank"><div class="border-class"></div></a>
             <div class="img-thumbnail-three"></div>
             <h2 class="trail-name">Patou Marathon</h2>
             <h4>42km + 3200m D+</h4>
@@ -190,14 +189,13 @@
         <h4 class="gtvo-stats typo parallax" data-depth="-3"><span>July 9</span><br>72km + 4600m D+</h4>
     <div class="ossau-img parallax" data-depth="0.2"></div>
     <div class="ossau-text parallax" data-depth="5">
-        <img class="gtvo-logo" src="./images/logo-gtvo.png" alt="GTVO logo">
+        <a href="https://www.gtvo.fr/" target="_blank"><img class="gtvo-logo" src="./images/logo-gtvo.png" alt="GTVO logo"></a>
         <ul>
             <li id="pre-description">Laruns, Bèarn Pyrenees</li>
             <li id="description">The GTVO is a classic circuit tracing the ridges of the Ossau valley. Despite the big climbs, I'm hoping to light the turbo!</li>
         </ul>
     </div>
 </div>
-
 <div class="canfranc-container">
     <div class="marquee-one">
         <h1>HEAVY HITTERS<i class="fa-solid fa-meteor meteor"></i>HEAVY HITTERS<i
@@ -247,7 +245,9 @@
             <i class="fa-solid fa-arrow-right-long arrow"></i>
         </div>
     </div> 
+    <a href="https://canfranccanfranc.com/ultra100K.html" target="_blank">
     <div class="canfranc-logo"></div>
+    </a>
 </div>
 <div class="gr-container">
     <div class="marquee-two">
@@ -255,7 +255,10 @@
     </div>
     <div class="gr-img"></div>
     <div class="gr-textbox">
+        <a href="https://www.grandraid-reunion.com/english/our-4-races/the-diagonale-des-fous-route/" target="_blank">
         <div class="gr-logo"></div>
+        </a>
+
         <ul>
             <li>Le Grand Raid</li>
             <li><br>164km / 10200m D+</li>
