add about page ect

--- a/Philosophy.html
+++ b/Philosophy.html
@@ -23,6 +23,17 @@
         <h1><span class="hide-text">philosophy</span></h1>
     </div>
 <div class="grid-container">
+    <div class="grid-quote">
+        I run for the dam fun of it. I run for the overt challenge of spanning distance with legs. I run becasue its in my blood to do so. I run tough mountain races not road marathons becasue they appeal to my need for
+        adventure becasue adventure represents a rite of passage. As much torment as an ultra marathon throws my way, at the end is gratitude, a gratitude for the test as
+        teacher, for a heart that beats. Simple things in life are the most precious. Heightened states dissipate, but something durable remains.
+        <div class="pic-one skewElem parallax" data-depth="8"></div>
+        <div class="pic-two  parallax" data-depth="4"></div>
+        <div class="caption-div parallax" data-depth="2">
+            01 Death is certain, life is not. <br> Dolpa, Nepal <br>
+            02 Cower beneath your mountain gods. <br> Kangchenjunga, Nepal
+        </div>
+    </div>
    <div class="abadablam skewElem grid-img parallax" data-depth="0.9"></div>
    <div class="grid-text grid-text-one skewElem parallax" data-depth="1.7">
     <span id="dictionary">running</span><br>:man's notion of terrestial flight<br>//Where have you been all this time?<br><br> <span id="out-running">Out running.</span>
@@ -31,21 +42,12 @@
 <div class="grid-text grid-text-two parallax" data-depth="4">
    Once <br>gargantuan <br> reduced to clattering parts <br> on the verge of annhilation<br>
    <p>:proof of ultra</p>
-   <div class="pic-three skewElem parallax" data-depth="3"></div>
+   <div class="pic-three parallax" data-depth="3"></div>
    <div class="pic-four parallax" data-depth="2.2"></div>
    <div class="caption-div-two parallax" data-depth="2.5">
     03 Visions of grandeur <br> Grand Teton, WY <br>
     04 Pursued by wrathful deities <br> Rowaling Himalaya
    </div>
-</div>
-<div class="grid-quote" >
-    I run for the dam fun of it, the sensation of speed, I run becasue it feels natural to do so, becasue I am compelled to unleash my inner animal. I run tough mountain races not road marathons becasue they appeal to my lust for adventure. As much torment as an ultra throws my way, at the end I find gratitude, a gratitude for the test as teacher, for a heart that beats. Simple things glow. The state is transient but something durable remains in my pocket.
-    <div class="pic-one skewElem parallax" data-depth="8"></div>
-    <div class="pic-two skewElem parallax" data-depth="4"></div>
-    <div class="caption-div parallax" data-depth="2">
-        01 Death is certain, life is not. <br> Dolpa, Nepal <br>
-        02 Cower beneath your mountain gods. <br> Kangchenjunga, Nepal
-    </div>
 </div>
 <div class="creed-container">
         <div class="hike-img-one parallax" data-depth="2"></div>
