--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <div class="hero-nav">
         <ul>
             <li class="home-nav"><a class="sub-header test-link" href="/racing.html">RACING</a></li>
-            <li class="home-nav"><a class="sub-header" href="/about.html">PHILOSOPHY</a></li>
-            <li class="home-nav"><a class="sub-header" href="#">COACHING</a></li>
+            <li class="home-nav"><a class="sub-header" href="/Philosophy.html">PHILOSOPHY</a></li>
+            <li class="home-nav"><a class="sub-header" href="/contact.html">ABOUT/CONTACT</a></li>
             
         </ul>
     </div>
@@ -33,3 +33,5 @@
 <script src="/js files/script.js"></script>
 </body>
 </html>
+
+<!-- add insta/relevant links at top and maybe en/fr toggle w flags -->
