--- a/racing.html
+++ b/racing.html
@@ -9,6 +9,7 @@
 <link
     href="https://fonts.googleapis.com/css2?family=Bellota+Text:ital,wght@0,300;0,400;0,700;1,400&family=Fredoka:wght@300;400&family=Plaster&display=swap"
     rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;200;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -192,13 +193,27 @@
         <a href="https://www.gtvo.fr/" target="_blank"><img class="gtvo-logo" src="./images/logo-gtvo.png" alt="GTVO logo"></a>
         <ul>
             <li id="pre-description">Laruns, Bèarn Pyrenees</li>
-            <li id="description">The GTVO is a classic circuit tracing the ridges of the Ossau valley. Despite the big climbs, I'm hoping to light the turbo!</li>
+            <li id="description">Despite the many big climbs, much of the terrain is runnable. The GTVO is a classic event for the festive atmposphere and legendary course, which draws a loop along the ridges of the Ossau valley. I'm hoping to light the turbo!</li>
         </ul>
     </div>
 </div>
+<div class="gabizos-container">
+    <div class="gabizos-img"></div>
+    <h1 class="gabizos-title">Gabizos Sky Race</h1>
+    <a href="https://www.lesgabizos.com/gabizosskyrace" target="_blank"><div class="gabizos-logo"></div></a>
+    <div class="gabizos-text-box">
+        <ul>
+            <li>LARRENS-MARSOUS / Pyrenees</li>
+            <li>31km / 2400m D+ / July 23</li>
+            <li><br> The term 'sky race' is used for courses which exemplify mountain running--big, steep climbs and descents, on technical terrain. Les Gabizos route climbs 1500m to the summit of Pic du Sanctus (2480m), drops into the Gorette ski station and follows the GR10 trekking route over consecutive passes to the finish.</li>
+        </ul>
+        
+    </div>
+
+</div>
 <div class="canfranc-container">
     <div class="marquee-one">
-        <h1>HEAVY HITTERS<i class="fa-solid fa-meteor meteor"></i>HEAVY HITTERS<i
+        <h1>AGAINST THE MOUNTAIN GODS<i class="fa-solid fa-meteor meteor"></i>AGAINST THE MOUNTAIN GODS<i
                 class="fa-solid fa-meteor meteor"></i>HEAVY HITTERS</h1>
     </div>
 
@@ -275,6 +290,6 @@
 </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.3/ScrollTrigger.min.js"></script>
-    <script src="/js files/script.js"></script>
+    <script src="/js files/racing.js"></script>
 </body>
 </html>
