media querey begins

--- a/racing.html
+++ b/racing.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Racing Page</title>
     <link rel="stylesheet" href="./css/racing.css">
+    <link rel="stylesheet" href="./css/racingMediaQuery.css">
+    
 <link
     href="https://fonts.googleapis.com/css2?family=Bellota+Text:ital,wght@0,300;0,400;0,700;1,400&family=Fredoka:wght@300;400&family=Plaster&display=swap"
     rel="stylesheet">
