--- a/contact.html
+++ b/contact.html
@@ -14,6 +14,21 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
+    <div class="pre-load-wrapper">
+        <i class="fa-solid fa-person-running runner"></i>
+        <i class="fa-solid fa-person-running runner-two"></i>
+        <i class="fa-solid fa-person-running runner-three"></i>
+    
+        <svg class="whole-svg-two" width="417.74881" height="417.74881" viewBox="0 0 110.52936 110.52937" version="1.1"
+            id="svg5" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg">
+            <defs id="defs2" />
+            <g id="layer1" transform="translate(-14.306352,-15.652887)">
+                <circle
+                    style="fill:none;stroke:rgba(214, 48, 49,0.7);stroke-width:2;stroke-linecap:round;stroke-miterlimit:4;stroke-dasharray:none"
+                    id="circlePath-two" cx="69.571037" cy="70.917572" r="53.412601" />
+            </g>
+        </svg>
+    </div>
     <nav>
         <ul>
             <li><a class="animate-link" href="./index.html"><i id="star-spin" class="fa-solid fa-bahai"></i>&nbsp HOME</a>
@@ -32,7 +47,9 @@
     <br><br><span id="ps">all photos and web-dev by Ben Dhiman</span>
 </div>    
  
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+    integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.3/ScrollTrigger.min.js"></script>
 <script src="./js files/contact.js"></script>
