--- a/Philosophy.html
+++ b/Philosophy.html
@@ -157,6 +157,7 @@
     
         <h1>"What I’ve dared,<br>I've willed,<br>and what I’ve willed<br>I’ll do!" <span style="font-family: Bellota Text, cursive; font-style: italic; font-size: 25px;">-Captain Ahab</span><br><a href="./index.html"><i id="star-spin" class="fa-solid fa-bahai"></i>&nbsp; HOME</a></h1>
         <div class="selfie"></div>
+        <a href="https://www.instagram.com/american_cheetah/" target="_blank"><i id="insta-logo" class="fa-brands fa-instagram"></i></a>
     </div>
 
 
