--- a/contact.html
+++ b/contact.html
@@ -45,6 +45,7 @@
     My name is Ben Dhiman, I am 30 years old, living in the French Pyrenees with my wife and baby boy. Throughout my 20s I logged over 10,000 miles in the moutains, mostly with a pack on my back exploring some of the world's wildest places. I have been an athlete all my life and since 2017 have taken mountain running seriously. I am here to stake my claim as a champion and inspire others to live with passion, break down barriers, and show love to the planet.<br><br>
     <span class="spnsorship">Actively seeking sponsors. Please send inquiries to bdhiman244@gmail.com</span>
     <br><br><span id="ps">all photos and web-dev by Ben Dhiman</span>
+    <a href="https://www.instagram.com/american_cheetah/" target="_blank"><i class="fa-brands fa-instagram insta"></i></a>
 </div>    
  
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
