media query for home and racing pages

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 </head>
 <body>
     <div class="pre-load-wrapper">
-            <i class="fa-solid fa-person-running runner"></i>
-            <i class="fa-solid fa-person-running runner-two"></i>
-            <i class="fa-solid fa-person-running runner-three"></i>
+            <i class="fa-solid fa-person-running runner-icon runner"></i>
+            <i class="fa-solid fa-person-running runner-icon  runner-two"></i>
+            <i class="fa-solid fa-person-running runner-icon  runner-three"></i>
         
             <svg class="whole-svg-two" width="417.74881" height="417.74881" viewBox="0 0 110.52936 110.52937" version="1.1"
                 id="svg5" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg">
