--- a/racing.html
+++ b/racing.html
@@ -18,9 +18,9 @@
 </head>
 <body>
     <div class="pre-load-wrapper">
-        <i class="fa-solid fa-person-running runner"></i>
-        <i class="fa-solid fa-person-running runner-two"></i>
-        <i class="fa-solid fa-person-running runner-three"></i>
+        <i class="fa-solid fa-person-running runner-icon runner"></i>
+        <i class="fa-solid fa-person-running runner-icon runner-two"></i>
+        <i class="fa-solid fa-person-running runner-icon runner-three"></i>
     
         <svg class="whole-svg-two" width="417.74881" height="417.74881" viewBox="0 0 110.52936 110.52937" version="1.1"
             id="svg5" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg">
@@ -200,6 +200,55 @@
                 <li>Test piece mountain marathon</li>
             </ul>
         </div>
+        <div class="info-packet">
+            <a href="https://www.gtvo.fr/" target="_blank"><div class="border-class"></div></a>
+            <div class="img-thumbnail-four"></div>
+            <h2 class="trail-name">GTVO</h2>
+            <h4>72km + 3200m D+</h4>
+            <ul>
+                <li>July 9</li>
+                <li>Laruns</li>
+                <li>French Pyrenees</li>
+                <li>Legendary loop of the Ossau Valley</li>
+            </ul>
+        </div>
+        <div class="info-packet">
+            <a href="https://www.lesgabizos.com/gabizosskyrace" target="_blank"><div class="border-class"></div></a>
+            <div class="img-thumbnail-five"></div>
+            <h2 class="trail-name">Gabizos Sky Race</h2>
+            <h4>31km + 2400m D+</h4>
+            <ul>
+                <li>July 23</li>
+                <li>Arrens-Marsous</li>
+                <li>French Pyrenees</li>
+                <li>Competitive mountain derby</li>
+            </ul>
+        </div>
+        <div class="info-packet">
+            <a href="https://canfranccanfranc.com/ultra100K.html" target="_blank"><div class="border-class"></div></a>
+            <div class="img-thumbnail-six"></div>
+            <h2 class="trail-name">Canfranc-Canfranc</h2>
+            <h4>100km + 9000m D+</h4>
+            <ul>
+                <li>September 10</li>
+                <li>Canfranc</li>
+                <li>Spanish Pyrenees</li>
+                <li>Hardest 100km course in the world</li>
+            </ul>
+        </div>
+        <div class="info-packet">
+            <a href="https://www.grandraid-reunion.com/english/our-4-races/the-diagonale-des-fous-route/" target="_blank"><div class="border-class"></div></a>
+            <div class="img-thumbnail-seven"></div>
+            <h2 class="trail-name">Grand Raid Reunion</h2>
+            <h4>168km + 10400m D+</h4>
+            <ul>
+                <li>October 17</li>
+                <li>St Paul to St Denis</li>
+                <li>Reunion Island, FR</li>
+                <li>Mythic, indomitable finale</li>
+            </ul>
+        </div>
+        <a class="mq-bottom-nav-text" href="./index.html"><i class="fa-solid fa-bahai"></i>&nbsp HOME</a>
     </div>
 <div class="gtvo-container">
        
