--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-<body>
+<body class="preload">
     <div class="pre-load-wrapper">
             <i class="fa-solid fa-person-running runner-icon runner"></i>
             <i class="fa-solid fa-person-running runner-icon  runner-two"></i>
