--- a/racing.html
+++ b/racing.html
@@ -16,7 +16,7 @@
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-<body>
+<body class="preload">
     <div class="pre-load-wrapper">
         <i class="fa-solid fa-person-running runner-icon runner"></i>
         <i class="fa-solid fa-person-running runner-icon runner-two"></i>
@@ -209,7 +209,7 @@
                 <li>July 9</li>
                 <li>Laruns</li>
                 <li>French Pyrenees</li>
-                <li>Legendary loop of the Ossau Valley</li>
+                <li>Legendary loop, Ossau Valley</li>
             </ul>
         </div>
         <div class="info-packet">
@@ -233,7 +233,7 @@
                 <li>September 10</li>
                 <li>Canfranc</li>
                 <li>Spanish Pyrenees</li>
-                <li>Hardest 100km course in the world</li>
+                <li>Hardest 100km in the world</li>
             </ul>
         </div>
         <div class="info-packet">
