philosophy mobile work

--- a/Philosophy.html
+++ b/Philosophy.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Page</title>
     <link href="/css/about.css" rel="stylesheet">
+    <link href="/css/philosophyMQ.css" rel="stylesheet">
 <link
     href="https://fonts.googleapis.com/css2?family=Bellota+Text:ital,wght@0,300;0,400;0,700;1,400&family=EB+Garamond&family=Plaster&family=Roboto+Slab:wght@100;200;400;700&display=swap"
     rel="stylesheet">
@@ -17,9 +18,9 @@
 
 <body>
     <div class="pre-load-wrapper">
-        <i class="fa-solid fa-person-running runner"></i>
-        <i class="fa-solid fa-person-running runner-two"></i>
-        <i class="fa-solid fa-person-running runner-three"></i>
+        <i class="fa-solid fa-person-running runner-icon runner"></i>
+        <i class="fa-solid fa-person-running runner-icon runner-two"></i>
+        <i class="fa-solid fa-person-running runner-icon runner-three"></i>
     
         <svg class="whole-svg-two" width="417.74881" height="417.74881" viewBox="0 0 110.52936 110.52937" version="1.1"
             id="svg5" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg">
@@ -37,6 +38,9 @@
     <div class="typo-animation-container">
         <h1><span class="hide-text">philosophy</span></h1>
     </div>
+    <div class="mobile-title">
+        phi<br>loso<br>phy.
+    </div>
 <div class="grid-container">
     <div class="grid-quote">
         Because velocity begs and my blood boils with stagnation. I run because I must, I run for the dam fun of it. Running
@@ -53,7 +57,9 @@
     </div>
    <div class="abadablam skewElem grid-img parallax" data-depth="0.9"></div>
    <div class="grid-text grid-text-one skewElem parallax" data-depth="1.7">
-    <span id="dictionary">running</span><br>:man's notion of terrestial flight<br>//See how he scurries, see how he runs&#8212;<br><br> <span id="out-running">a most artless gesture.</span>
+    <span id="dictionary">running</span><br>:man's notion of terrestial flight
+    
+    <!-- <br>//See how he scurries, see how he runs&#8212;<br><br> <span id="out-running">a most artless gesture.</span> -->
    </div>
    <div class="placeholder-img skewElem grid-img parallax" data-depth="0.1"></div>
 <div class="grid-text grid-text-two parallax" data-depth="4">
@@ -81,7 +87,7 @@
             <li><span class="precept">THIS WILL ALSO CHANGE</span>. All things are impermanent, triumph will pass as will your despair at its absence.</li>
             <li><span class="precept">BE HUMBLE</span>. The mountain remains unscathed by your ascent.</li>
             <li><span class="precept">BE A WARRIOR</span>.</li>
-            <li><span class="precept">LEAN INTO DISCOMFORT. Especially in mundanity.</span>.</li>
+            <li><span class="precept">LEAN INTO DISCOMFORT. Especially in mundanity.</span></li>
             <li><span class="precept">HEAL UP</span>. Make time for convalescence.</li>
             <li><span class="precept">NATURE IS ALL THERE IS</span>. Appropriate maximum attention to subtlety. Make obeisance to water fresh and salty, be with your people under some trees.</li>
         </ul>
