reqworking the media q chaos

--- a/Philosophy.html
+++ b/Philosophy.html
@@ -59,7 +59,8 @@
    <div class="grid-text grid-text-one skewElem parallax" data-depth="1.7">
     <span id="dictionary">running</span><br>:man's notion of terrestial flight
     
-    <!-- <br>//See how he scurries, see how he runs&#8212;<br><br> <span id="out-running">a most artless gesture.</span> -->
+    <br>//subtlety be damned, the boy can run&#8212;<br><br> 
+    <!-- <span id="out-running">wings for hooves.</span> -->
    </div>
    <div class="placeholder-img skewElem grid-img parallax" data-depth="0.1"></div>
 <div class="grid-text grid-text-two parallax" data-depth="4">
