Lots of fun and interesting changes

--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About/Contact</title>
     <link rel="stylesheet" href="./css/contact.css"> 
+    <link rel="stylesheet" href="./css/contactMQ.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Bellota+Text:ital,wght@0,300;0,400;0,700;1,400&family=EB+Garamond&family=Plaster&family=Roboto+Slab:wght@100;200;400;700&display=swap"
         rel="stylesheet">
@@ -35,18 +36,23 @@
             </li>
         </ul>
     </nav>
+<div class="headline">ab<br>out</div>
+<img class="headline-pic" src="./images/cluster/reunionCluster.jpg" alt="mountains"/>
+    <div class="grid-container">
+    <div class="cluster-container">
         <div class="pic-one cluster-pic"></div>
         <div class="pic-two cluster-pic"></div>
-        <div class="pic-three cluster-pic"></div>
-        <div class="pic-four cluster-pic"></div>
-        <div class="headline">about</div>
+        <!-- <div class="pic-three cluster-pic"></div>
+        <div class="pic-four cluster-pic"></div> -->
+    </div>
        
 <div class="textbox">
-    My name is Ben Dhiman, I am 30 years old, living in the French Pyrenees with my wife and baby boy. Throughout my 20s I logged over 10,000 miles in the moutains, mostly with a pack on my back exploring some of the world's wildest places. I have been an athlete all my life and since 2017 have taken mountain running seriously. I am here to stake my claim as a champion and inspire others to live with passion, break down barriers, and show love to the planet.<br><br>
+    My name is Ben Dhiman, I am an elite mountain runner and burgeoning web developer, living in the French Pyrenees with my wife and son. In my 20s I logged over 10,000 miles in the moutains, mostly with a pack on my back exploring some of the world's wildest places. I have been an athlete all my life and since 2017 have taken mountain running seriously. I am here to stake my claim as a champion and inspire others to live with passion, break down barriers, and show love to the planet.<br><br>
     <span class="spnsorship">Actively seeking sponsors. Please send inquiries to bdhiman244@gmail.com</span>
     <br><br><span id="ps">all photos and web-dev by Ben Dhiman</span>
     <a href="https://www.instagram.com/american_cheetah/" target="_blank"><i class="fa-brands fa-instagram insta"></i></a>
 </div>    
+</div>
  
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
     integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
