--- a/racing.html
+++ b/racing.html
@@ -162,7 +162,7 @@
     <div class="info-packet-container"> 
         <div class="info-packet bagnere-classic">
             <a href="https://pb-organisation.com/resultats/G-LIVE/g-live.html?f=../suivi2022/BAGNERES%20CLASSIC%20TRAIL%202022.clax" target="_blank"><div class="winner">
-                <i class="fa-solid fa-trophy trophy"></i>
+                <i class="fa-solid fa-medal trophy"></i>
                     <h3>1<sup>st</sup><br>2:09<br><span id="course-rec">Course Record</span></h3>
                 
             </div></a>
@@ -176,11 +176,18 @@
                     <li>Steep route on local trails</li>
                 </ul>
         </div>
-        <div class="info-packet">
-            <a href="https://www.trails-hautacam.com/" target="_blank"><div class="border-class"></div></a>
+        <div class="info-packet hautacam-trails">
+            <a href="https://pb-organisation.com/resultats/G-LIVE/g-live.html?f=../suivi2022/TRAIL%20DE%20HAUTACAM%202022.clax"
+                target="_blank">
+                <div class="winner-two">
+                    <i class="fa-solid fa-medal trophy-two"></i>
+                    <h3>1<sup>st</sup><br>2:08<br><span id="course-rec-two">Course Record</span></h3>
+            
+                </div>
+            </a>
            <div class="img-thumbnail-right"></div>
             <h2 class="trail-name">Hautacam Trails</h2>
-            <h4>22km + 1600m D+</h4>
+            <h4>22km + 1650m D+</h4>
                 <ul>
                     <li>May 15</li>
                     <li>Village de Beaucens</li>
@@ -259,7 +266,7 @@
         <a href="https://www.gtvo.fr/" target="_blank"><img class="gtvo-logo" src="./images/logo-gtvo.png" alt="GTVO logo"></a>
         <ul>
             <li id="pre-description">Laruns, Bèarn Pyrenees</li>
-            <li id="description">Despite the many big climbs, much of the terrain is runnable. The GTVO is a classic event for the festive atmposphere and legendary course, which draws a loop along the ridges of the Ossau valley. I'm hoping to light the turbo!</li>
+            <li id="description">The GTVO is a legendary course drawing a loop along the ridges of the Ossau valley. Big climbs, Big views Big atmosphere.</li>
         </ul>
     </div>
 </div>
