--- a/Philosophy.html
+++ b/Philosophy.html
@@ -17,6 +17,7 @@
 </head>
 
 <body>
+    <div class="page-wrapper">
     <div class="pre-load-wrapper">
         <i class="fa-solid fa-person-running runner-icon runner"></i>
         <i class="fa-solid fa-person-running runner-icon runner-two"></i>
@@ -166,7 +167,7 @@
         <div class="selfie"></div>
         <a href="https://www.instagram.com/american_cheetah/" target="_blank"><i id="insta-logo" class="fa-brands fa-instagram"></i></a>
     </div>
-
+</div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
     integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
