changes to contact pag and favicon and js mobile

--- a/Philosophy.html
+++ b/Philosophy.html
@@ -6,6 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Page</title>
+    <link
+    rel="icon"
+    type="image/png"
+    href="/images/favicon6.png">
     <link href="/css/about.css" rel="stylesheet">
     <link href="/css/philosophyMQ.css" rel="stylesheet">
 <link
