--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About/Contact</title>
+    <link rel="icon" type="image/png" href="/images/favicon6.png">
     <link rel="stylesheet" href="./css/contact.css"> 
     <link rel="stylesheet" href="./css/contactMQ.css">
     <link
@@ -38,9 +39,26 @@
     </nav>
 <div class="headline">ab<br>out</div>
 <img class="headline-pic" src="./images/cluster/reunionCluster.jpg" alt="mountains"/>
+<div class="marquee-container">
+    <div id="marquee-text">Actively seeking sponsorship. <i class="fa-solid fa-handshake-angle handshake"></i> No partner too small or large.</div>
+</div>
     <div class="grid-container">
     <div class="cluster-container">
         <div class="pic-one cluster-pic"></div>
+        <div class="contact-bubble">
+            <h6>Contact</h6>
+            <ul>
+                <li>
+                    <i class="fa-solid fa-envelope envelope"></i> <br>bdhiman244@gmail.com
+                </li>
+                <li>
+                    <i class="fa-solid fa-phone"></i><br>+33 672 4353 28
+                </li>
+                <li>
+                    <a href="https://www.instagram.com/american_cheetah/"><i class="fa-brands fa-instagram insta-contact"></i><br>@american_cheetah</a>
+                </li>
+            </ul>
+        </div>
         <div class="pic-two cluster-pic"></div>
         <!-- <div class="pic-three cluster-pic"></div>
         <div class="pic-four cluster-pic"></div> -->
@@ -48,9 +66,8 @@
        
 <div class="textbox">
     My name is Ben Dhiman, I am an elite mountain runner and burgeoning web developer, living in the French Pyrenees with my wife and son. In my 20s I logged over 10,000 miles in the moutains, mostly with a pack on my back exploring some of the world's wildest places. I have been an athlete all my life and since 2017 have taken mountain running seriously. I am here to stake my claim as a champion and inspire others to live with passion, break down barriers, and show love to the planet.<br><br>
-    <span class="spnsorship">Actively seeking sponsors. Please send inquiries to bdhiman244@gmail.com</span>
     <br><br><span id="ps">all photos and web-dev by Ben Dhiman</span>
-    <a href="https://www.instagram.com/american_cheetah/" target="_blank"><i class="fa-brands fa-instagram insta"></i></a>
+   
 </div>    
 </div>
  
