--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ben Dhiman Athlete Page</title>
+    <title>Ben Dhiman Athlete Page</title><link rel="icon" type="image/png" href="/images/favicon6.png">
     <link rel="stylesheet" href="style.css">
 <link
     href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Bellota+Text:ital,wght@0,300;0,400;0,700;1,400&family=Coda:wght@400;800&family=Plaster&family=Suez+One&family=Titillium+Web:ital,wght@0,900;1,700&display=swap"
