--- a/racing.html
+++ b/racing.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Racing Page</title>
+    <link rel="icon" type="image/png" href="/images/favicon6.png">
     <link rel="stylesheet" href="./css/racing.css">
     <link rel="stylesheet" href="./css/racingMediaQuery.css">
     
