--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <link
     href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Bellota+Text:ital,wght@0,300;0,400;0,700;1,400&family=Coda:wght@400;800&family=Plaster&family=Suez+One&family=Titillium+Web:ital,wght@0,900;1,700&display=swap"
     rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300;600&family=Roboto+Slab:wght@100;200;400;700&display=swap"
+        rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
     integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -31,6 +34,9 @@
     </div>
 <div class="hero-container">
     <div class="hero-image"></div>
+    <!-- <div class="latest-results-box">
+        <h5>Lastest Results</h5>
+    </div> -->
     <div class="hero-text">
         <h1>BEN<br>DHIMAN</h1>
         <h2 class="domain-animation">MTN RUNNER</h2>
