--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About/Contact</title>
-    <link rel="icon" type="image/png" href="/images/favicon10abs.png">
+    <link rel="icon" type="image/png" href="/images/favicon6.png">
     <link rel="stylesheet" href="./css/contact.css"> 
     <link rel="stylesheet" href="./css/contactMQ.css">
     <link
@@ -39,9 +39,9 @@
     </nav>
 <div class="headline">ab<br>out</div>
 <img class="headline-pic" src="./images/cluster/reunionCluster.jpg" alt="mountains"/>
-<div class="marquee-container">
+<!-- <div class="marquee-container">
     <div id="marquee-text">Actively seeking sponsorship.&nbsp;<i class="fa-solid fa-handshake-angle handshake"></i>&nbsp;Companies small or large.</div>
-</div>
+</div> -->
 
 <div class="mobile-container">
     <div class="mobile-intro">
