--- a/index.html
+++ b/index.html
@@ -34,9 +34,11 @@
     </div>
 <div class="hero-container">
     <div class="hero-image"></div>
-    <!-- <div class="latest-results-box">
-        <h5>Lastest Results</h5>
-    </div> -->
+
+<div class="marquee-container">
+    <div id="marquee-text"><span class="subhead-text">NEXT RACE:</span> JUNE 18 - PATOU MARATHON 42km 3300m D+ &nbsp; <span class="subhead-text">RECENT RESULTS:</span> &nbsp; May 22 - 1<sup>st</sup> Place, Hautacam Trails 22km // May 1 - 1<sup>st</sup> Place, Bagneres Classic 25km</div>
+</div>
+
     <div class="hero-text">
         <h1>BEN<br>DHIMAN</h1>
         <h2 class="domain-animation">MTN RUNNER</h2>
@@ -45,7 +47,9 @@
         <ul>
             <li class="home-nav"><a class="sub-header test-link" href="/racing.html">RACING</a></li>
             <li class="home-nav"><a class="sub-header" href="/Philosophy.html">PHILOSOPHY</a></li>
-            <li class="home-nav"><a class="sub-header" href="/contact.html">ABOUT/CONTACT</a></li>
+            <li class="home-nav"><a class="sub-header" href="#">PRESS</a></li>
+            <li class="home-nav"><a class="sub-header" href="/contact.html">CONTACT</a></li>
+          
             
         </ul>
     </div>
