--- a/contact.html
+++ b/contact.html
@@ -37,12 +37,8 @@
             </li>
         </ul>
     </nav>
-<div class="headline">ab<br>out</div>
+<div class="headline">con<br>tact</div>
 <img class="headline-pic" src="./images/cluster/reunionCluster.jpg" alt="mountains"/>
-<!-- <div class="marquee-container">
-    <div id="marquee-text">Actively seeking sponsorship.&nbsp;<i class="fa-solid fa-handshake-angle handshake"></i>&nbsp;Companies small or large.</div>
-</div> -->
-
 <div class="mobile-container">
     <div class="mobile-intro">
 <div class="title">
