--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    <div class="pre-load-wrapper">
+    <!-- <div class="pre-load-wrapper">
         <i class="fa-solid fa-person-running runner"></i>
         <i class="fa-solid fa-person-running runner-two"></i>
         <i class="fa-solid fa-person-running runner-three"></i>
@@ -30,7 +30,7 @@
                     id="circlePath-two" cx="69.571037" cy="70.917572" r="53.412601" />
             </g>
         </svg>
-    </div>
+    </div> -->
     <nav>
         <ul>
             <li><a class="animate-link" href="./index.html"><i id="star-spin" class="fa-solid fa-bahai"></i>&nbsp HOME</a>
