--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body class="preload">
-    <div class="page-wrapper">
+    <!-- <div class="page-wrapper"> -->
     <div class="pre-load-wrapper">
             <i class="fa-solid fa-person-running runner-icon runner"></i>
             <i class="fa-solid fa-person-running runner-icon  runner-two"></i>
