--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <ul>
             <li class="home-nav"><a class="sub-header test-link" href="/racing.html">RACING</a></li>
             <li class="home-nav"><a class="sub-header" href="/Philosophy.html">PHILOSOPHY</a></li>
-            <li class="home-nav"><a class="sub-header" href="#">PRESS</a></li>
+            <!-- <li class="home-nav"><a class="sub-header" href="#">PRESS</a></li> -->
             <li class="home-nav"><a class="sub-header" href="/contact.html">CONTACT</a></li>
           
             
